@@ -1,0 +1,9 @@
+package org.apache.cayenne.crypto.db;
+
+import org.apache.cayenne.crypto.db.auto._Table5;
+
+public class Table5 extends _Table5 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
