@@ -1,0 +1,9 @@
+package org.apache.cayenne.crypto.db;
+
+import org.apache.cayenne.crypto.db.auto._Table6;
+
+public class Table6 extends _Table6 {
+
+    private static final long serialVersionUID = 1L; 
+
+}
