@@ -1,0 +1,37 @@
+package org.apache.cayenne.crypto.db.auto;
+
+import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
+
+/**
+ * Class _Table6 was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _Table6 extends CayenneDataObject {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "ID";
+
+    public static final Property<Long> CRYPTO_INT1 = Property.create("cryptoInt1", Long.class);
+    public static final Property<Integer> CRYPTO_INT4 = Property.create("cryptoInt4", Integer.class);
+
+    public void setCryptoInt1(long cryptoInt1) {
+        writeProperty("cryptoInt1", cryptoInt1);
+    }
+    public long getCryptoInt1() {
+        Object value = readProperty("cryptoInt1");
+        return (value != null) ? (Long) value : 0;
+    }
+
+    public void setCryptoInt4(int cryptoInt4) {
+        writeProperty("cryptoInt4", cryptoInt4);
+    }
+    public int getCryptoInt4() {
+        Object value = readProperty("cryptoInt4");
+        return (value != null) ? (Integer) value : 0;
+    }
+
+}
